2007-06-18  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.hh (TitleItem::TitleItem): 
	Start using wstring instead of string for client titles and other
	printable data. Still need to add iconv support and reading/setting
	of UTF-8 string properties to read client titles properly.

	* src/CmdDialog.cc (CmdDialog::bufAdd): 
	Use wstring in the CmdDialog and iswprint to check for printability
	in order to resolve non ASCII input issues. Closing #104
	(Thanks lukas for reporting)

2007-05-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::Client): 
	Add fix for broken iconified state after restart. Closing #38
	(Thanks giuliani{.}blackfenix{@}gmail{.}com for reporting)

	* data/autoproperties: 
	Added type rules to autoproperties file.
	Added removal of border and titlebar for customize toolbar dialog
	in firefox.

	* src/Frame.cc (Frame::applyAPGeometry): 
	Change handling of auto properties geometry so < 1 in width/height
	means screen width/height.

	* src/AutoProperties.cc (AutoProperties::parseTypeProperty): 
	Made _NET_WM_WINDOW_TYPE handling configurable by creating a new
	set of auto properties called TypeRules. If nothing is changed the old
	default behaviour is still there apart from geometry of desktop class
	is not yet working.

	* src/CfgParser.cc (CfgParser::parse_source_new): 
	Fix bug in configuration parses causing it to parse files 2 times
	when the first open was ok. Increased memory usage with 30% after
	startup on my setup.

2007-05-30  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::readMwmHints): 
	Fixed handling of _MOTIF_WM_HINTS to detect border/title only decors
	correctly. Still ignoring the handle, menu, iconify and maximize
	states as altering allowed actions probably is a bad idea.
	
2007-05-29  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (PDecor::setBorderShape): 
	Add shaping of non-corner border windows. Closing #97
	(Thanks julien for reporting.)

pekwm-0.1.6 released
