@@ -83,6 +83,7 @@ public: // Public Member Functions
     virtual void move(int x, int y, bool do_virtual = true);
     virtual void moveVirtual(int x, int y);
     virtual void resize(uint width, uint height);
+    virtual void moveResize(int x, int y, uint width, uint height, bool do_virtual = true);
 
     virtual void setWorkspace(uint workspace);
 
