@@ -121,6 +121,7 @@ class Button : public PWinObj {
     virtual void move(int x, int y, bool do_virtual = true);
     virtual void moveVirtual(int x, int y);
     virtual void resize(uint width, uint height);
+    virtual void moveResize(int x, int y, uint width, uint height, bool do_virtual = true);
     virtual void raise(void);
     virtual void lower(void);
 
